Thu Jun 22 00:03:16 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h
        * dds/DCPS/transport/framework/DataLinkSetMap.h
        * dds/DCPS/transport/framework/TransportFactory.h
        * dds/DCPS/transport/framework/TransportImpl.h
        * dds/DCPS/transport/framework/TransportImplFactory.h
        * dds/DCPS/transport/framework/SimpleTcpConnection.h
        * dds/DCPS/transport/framework/SimpleUdpTransport.h

          Temporary commented the fix for BCB6 build at
          "Fri Jun  9 07:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>"
          These changes broke the Linux build.

Thu Jun 22 16:06:21 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        These changes mainly fix the problem    
         "create_datawriter() does not wait for full association establishment
         so even if there are waiting subscribers,  a write shortly after
         creating the datawriter may be dropped on the publisher side because
         add_associations() has not completed on the publisher side.
         The sample may also be dropped on the subscriber side because the
         connection exists between the publisher and subscriber but the
         associations have not been mapped on the subscriber side."
        
         The solution is to make the subscriber send a FULLY_ASSOCIATED ack
         when the new association is received from repo and the connection is 
         established. On the publisher side, the transport will notify the 
         datawriter that the subscriber is fully associated when the ack is 
         received. The application can use get_matched_subscriptions() to 
         determine when it should start sending samples.        
         (See RT8498 for details)  
         
        * dds/DdsDcps.mpc:
        * dds/DCPS/transport/framework/TransportControlElement.cpp:
        * dds/DCPS/transport/framework/TransportControlElement.h: